--- a/src/main/resources/My Report.jrxml
+++ b/src/main/resources/My Report.jrxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft WebStudio version 3.0.0 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" pageWidth="595" pageHeight="842" name="Blank_A4" uuid="d1fa7a7c-abd6-4cfb-bba5-468925c847b1">
+  <propertyExpression name="net.sf.jasperreports.data.adapter"><![CDATA[$F{name}]]></propertyExpression>
   <field name="name" class="java.lang.String"/>
   <title>
     <band height="200"/>
