--- a/src/main/resources/My Report.jrxml
+++ b/src/main/resources/My Report.jrxml
@@ -4,26 +4,7 @@
   <propertyExpression name="net.sf.jasperreports.data.adapter"><![CDATA[$F{name}]]></propertyExpression>
   <field name="name" class="java.lang.String"/>
   <title>
-    <band height="200">
-      <areaChart>
-        <chart>
-          <reportElement x="147" y="16" width="200" height="200" uuid="52d6007b-6d07-46a3-8d26-700e6b47dfe4"/>
-          <chartTitle/>
-          <chartSubtitle/>
-          <chartLegend/>
-        </chart>
-        <categoryDataset/>
-        <areaPlot>
-          <plot/>
-          <categoryAxisFormat>
-            <axisFormat/>
-          </categoryAxisFormat>
-          <valueAxisFormat>
-            <axisFormat/>
-          </valueAxisFormat>
-        </areaPlot>
-      </areaChart>
-    </band>
+    <band height="200"/>
   </title>
   <pageHeader>
     <band height="100"/>
@@ -39,6 +20,24 @@
         <reportElement x="228" y="33" width="200" height="30" uuid="f1c240f9-1cc0-4c18-800d-dbdcf76cc8b4"/>
         <textFieldExpression><![CDATA[$F{name}]]></textFieldExpression>
       </textField>
+      <areaChart>
+        <chart>
+          <reportElement x="165" y="125" width="200" height="200" uuid="52d6007b-6d07-46a3-8d26-700e6b47dfe4"/>
+          <chartTitle/>
+          <chartSubtitle/>
+          <chartLegend/>
+        </chart>
+        <categoryDataset/>
+        <areaPlot>
+          <plot/>
+          <categoryAxisFormat>
+            <axisFormat/>
+          </categoryAxisFormat>
+          <valueAxisFormat>
+            <axisFormat/>
+          </valueAxisFormat>
+        </areaPlot>
+      </areaChart>
     </band>
   </detail>
   <pageFooter>
